Fix overflow

--- a/frontend/src/ui-kit/table/table.scss
+++ b/frontend/src/ui-kit/table/table.scss
@@ -1,6 +1,4 @@
 .c-table {
-  @apply overflow-x-auto overflow-y-hidden;
-
   table {
     @apply w-full;
 
